<resources>
    <string name="app_name">RestaurAPP</string>

    <!--FOR LOGIN-->
    <string name="google_logo_description">Google Logo</string>
    <string name="back_btn_desc">Go Back</string>
    <string name="txt_type_email">Type your Email</string>
    <string name="txt_type_pass">Type your Password</string>
    <string name="txt_type_repass">Retype your Password</string>
    <string name="txt_type_google">Sign In With Google</string>
    <string name="txt_type_signin">Sign In</string>
    <string name="txt_type_signup">Sign Up</string>
    <string name="txt_sign_up_now">Not Registered Yet , Sign Up !</string>
    <string name="txt_sign_in_now">Already Registered , Sign In !</string>

    <!--FOR TABLE LIST-->
    <string name="txt_table_page_information">Select a Table to take the Commands:</string>

    <!--FOR COMMAND CREATION-->
    <string name="txt_commandcreate_tableinfo">TABLE #</string>
    <string name="txt_testNumber">25</string>
    <string name="txt_zeroNumber">0.0</string>
    <string name="txt_testdishname">Spaghetti</string>
    <string name="txt_dollarsymbol">$</string>

    <!-- FOR COMMAND LIST -->
    <string name="txt_testCommandTitle">Command title</string>
    <string name="txt_command_page_information">Select a Command to Edit its information</string>
    <string name="txtsearchcom">Search Command…</string>
    <string name="notfoundcomfilter">Command not found</string>

    <!--COMMAND DELETION STRINGS-->
    <string name="delete_confirmation_title">Delete Command</string>
    <string name="delete_confirmation_message">Are you sure you want to delete this command?</string>
    <string name="delete_confirmation_positive_button">Delete</string>
    <string name="delete_confirmation_negative_button">Cancel</string>
    <string name="command_deleted_success">Command deleted successfully</string>
    <string name="failed_to_delete_command">Failed to delete command: %1$s</string>
    <string name="txt_delete_command_menu">Delete</string>

    <!--STRINGS LANGUAGE-->
    <string-array name="languages">
        <item>🇬🇧</item>
        <item>🇪🇸</item>
    </string-array>


    <string name="english_language">🇬🇧</string>
    <string name="spanish_language">🇪🇸</string>

    <!-- MENU LNG -->
    <string name="txt_create_command_menu">Create</string>
    <string name="txt_list_command_menu">List</string>
    <string name="txt_settings_command_menu">Settings</string>
    <string name="txt_language_menu_es">Spanish</string>
    <string name="txt_language_menu_en">English</string>


    <!-- COM SHOW FRAGMENT -->
    <string name="com_show_title_txt">Title:</string>
    <string name="command_title_com_show_txt">Command Title</string>
    <string name="description_com_show_txt">Description:</string>
    <string name="command_description_com_show_txt">Command Description</string>
    <string name="total_price_com_show_txt">Total Price:</string>

    <string name="image_button_close_com_show_txt">Close</string>
    <string name="edit_image_button_com_show_txt">Edit</string>
    <string name="csv_file_downloaded">CSV file downloaded: %1$s</string>


    <!-- CREATE COM -->
    <string name="total_createcom">TOTAL: $</string>
    <string name="total_command_list">TOTAL:</string>
    <string name="table_command_list">TABLE:</string>
    <string name="add_a_title_txt_create_com">Add a Title</string>
    <string name="type_the_command_title_create_com">Type the Command Title</string>
    <string name="add_a_description_txt_create_com">Add a description</string>
    <string name="type_the_command_description_create_com">Type the Command Description</string>
    <string name="error_create_command">ERROR, could not create the Command</string>
    <string name="success_create_command">Command Created successfully</string>
    <string name="cannot_create_command">You cannot create an empty Command!</string>
    <string name="dish_added_command">Dish added to the Command</string>
    <string name="searchdishtxt">Search dish…</string>
    <string name="notfoundfilter">Dish not found</string>


    <!-- EDIT COM -->
    <string name="command_table_edit_com_txt">Command Table</string>
    <string name="edit_command_title_edit_com">Edit Command Title</string>
    <string name="type_the_command_title_Edit_com">Type the Command Title</string>
    <string name="edit_command_description_edit_com">Edit Command Description</string>
    <string name="type_the_command_description_edit_com">Type the Command Description</string>
    <string name="command_total_price_edit_com">Command Total Price</string>
    <string name="save_edit_com_txt">SAVE</string>
    <string name="close_content_description_edit_com">Close</string>
    <string name="command_edited_successfully">Command edited successfully</string>
    <string name="error_message_edit">ERROR. %1$s</string>

    <!-- NON-TRANSLATABLE -->
    <string name="hashtag_table_list" translatable="false">#</string>
    <string name="txt_descr_example" translatable="false">This should be a small short information about a table to test te RecyclerView list.</string>
    <string name="example_text_number_table_list" translatable="false">1</string>
    <string name="image_table_content_description" translatable="false">Image Table</string>
    <string name="loading_animation_logo" translatable="false">Loading Animation Logo</string>
    <string name="export_to_csv_content_description" translatable="false">Export to CSV</string>
    <string name="tv_com_show_value_txt" translatable="false">$20.00</string>
    <string name="commandicon_image_descr" translatable="false">CommandIcon</string>
    <string name="dish_icon" translatable="false">Dish Icon</string>
    <string name="profile_image_settings" translatable="false">Profile_image</string>
    <string name="floating_action_edit_image" translatable="false">Floating Action Edit Image</string>

    <!-- SETTINGS -->
    <string name="log_out_fragment_settings">LOG OUT</string>
    <string name="settings_language">Language:</string>
    <string name="settings_name">Name</string>
    <string name="settings_description">Description</string>
    <string name="settings_location">Location</string>
    <string name="settings_save">SAVE</string>
    <string name="settings_saved_message">Settings saved successfully</string>
    <string name="error_saving_settings">Error saving settings, %s</string>
    <string name="image_removed_successfully">Image removed successfully</string>
    <string name="error_removing_image">Error removing image, %s</string>
    <string name="error_selecting_image">Error selecting image</string>
    <string name="error_capturing_image">Error capturing image</string>
    <string name="error_uploading_image">Error uploading image: %s</string>
    <string name="image_uploaded_successfully">Image uploaded successfully</string>

    <string name="camera_permission_required">Camera Permission Required</string>
    <string name="camera_permission_message">To use the camera, you need to grant camera permission.</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="cancel">Cancel</string>

    <string name="choose_image_gallery">\uD83D\uDCC1 Choose image from gallery</string>
    <string name="take_picture_camera">\uD83D\uDCF7 Take picture with camera</string>
    <string name="delete_profile_picture">❌ Delete your profile picture</string>
    <string name="edit_restaurant_image_title">Edit your Restaurant image</string>


    <!-- SIGN IN SNACKBARS -->
    <string name="invalid_credentials">Error. Credentials are not valid or are expired</string>
    <string name="user_not_exist">Error. User does not exist or is disabled</string>
    <string name="additional_verification_user">Error. User\'s credential requires additional verification or reauthentication</string>
    <string name="credential_associated_account">Error. Credential used for sign-in is already associated with another user account</string>
    <string name="network_error">"Network Error. Cannot connect to the server. Please check your Internet connection or try again later."</string>
    <string name="email_cannot_empty">Email cannot be empty</string>
    <string name="password_cannot_empty">Password cannot be empty</string>
    <string name="invalid_credentials_try_again">Invalid credentials, please try again</string>

    <!-- SIGN UP SNACKBARS -->
    <string name="error_weak_password">Error. Password is too weak. %1$s</string>
    <string name="error_invalid_email">Error. Email is malformed or invalid.</string>
    <string name="error_user_exists">Error. User already exists with the given email.</string>
    <string name="error_network">Network Error. Cannot connect to the server. Please check your Internet connection or try again later.</string>
    <string name="error_too_many_requests">Error. You have sent too many requests, please try again later.</string>
    <string name="error_password_match">Password does not match</string>
    <string name="error_email_empty">Email cannot be empty</string>
    <string name="error_password_empty">Password cannot be empty</string>
    <string name="error_confirm_password">Please confirm your password</string>
    <string name="error_invalid_credentials">Invalid credentials, please try again</string>

</resources>