<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:backgroundTint="@color/app_tertiary_brown"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textCommandTitle"
            android:layout_width="305dp"
            android:layout_height="63dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:gravity="fill_vertical"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:text="@string/txt_testCommandTitle"
            android:textColor="@color/app_other_beige"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textCommandDescr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="15dp"
            android:text="@string/txt_descr_example"
            android:textColor="@color/app_other_beige"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textCommandTitle" />

        <TextView
            android:id="@+id/textCommandTotalPrice"
            android:layout_width="199dp"
            android:layout_height="30dp"
            android:gravity="end"
            android:paddingStart="0dp"
            android:paddingEnd="35dp"
            android:paddingBottom="15dp"
            android:text="@string/total_command_list"
            android:textColor="@color/app_other_beige"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textCommandDescr" />


        <TextView
            android:id="@+id/textTableAssigned"
            android:layout_width="199dp"
            android:layout_height="30dp"
            android:paddingStart="35dp"
            android:paddingEnd="22dp"
            android:text="@string/table_command_list"
            android:textColor="@color/app_other_beige"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textCommandDescr" />


        <ImageView
            android:id="@+id/imgCommand"
            android:layout_width="79dp"
            android:layout_height="65dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/commandicon_image_descr"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/commandicon" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>