<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ComListDisplay"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtInfoCommand"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:text="@string/txt_command_page_information"
        android:textColor="@color/app_primary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/searchCommand"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchCommand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        app:iconifiedByDefault="false"
        app:layout_constraintTop_toBottomOf="@+id/txtInfoCommand"
        app:queryBackground="@android:color/transparent"
        app:queryHint="@string/txtsearchcom" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchCommand">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/commandrecyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layoutAnimation="@anim/rv_load_anim_layout"
            android:paddingHorizontal="5dp"
            tools:listitem="@layout/command_list" />

        <ImageView
            android:id="@+id/loadingAnimation"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:contentDescription="@string/loading_animation_logo"
            android:pivotX="50%"
            android:pivotY="50%"
            android:rotation="0"
            android:src="@drawable/ic_load_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
