<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:backgroundTint="@color/teal_700"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textDishName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:paddingEnd="5dp"
            android:text="@string/txt_testdishname"
            android:textColor="@color/yellow"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtPrizeDollar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="12dp"
            android:paddingBottom="18dp"
            android:text="@string/txt_dollarsymbol"
            android:textColor="@color/yellow"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textDishName" />

        <TextView
            android:id="@+id/txtDishPrize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingBottom="18dp"
            android:text="@string/txt_testNumber"
            android:textColor="@color/yellow"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/txtPrizeDollar"
            app:layout_constraintTop_toBottomOf="@+id/textDishName" />

        <ImageView
            android:id="@+id/imgDishes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="248dp"
            android:layout_marginTop="16dp"
            android:paddingBottom="20dp"
            app:layout_constraintStart_toStartOf="@+id/textDishName"
            app:layout_constraintTop_toTopOf="@+id/textDishName"
            tools:srcCompat="@tools:sample/avatars" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>